<resources>
    <string name="app_name">eGift</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="english">English</string>
    <string name="greek">Greek</string>
    <string name="network_not_connect">Network not connect.</string>
    <string name="btn_ok">OK</string>
    <string name="menu_setting">Settings</string>
    <string name="cancel">Cancel</string>

    <string name="invalid_email">Invalid email</string>
    <string name="invalid_username_password">User Name and Password are invalid </string>
    <string name="cannot_connect_server">Cannot connect to server</string>
    <string name="connect_timeout">Connect to server timeout</string>
    <string name="system_error">System got error. Please try again.</string>
    <string name="invalid_login">Invalid Login</string>
    <string name="login_success">Login successful</string>
    <string name="login_failed">Login failed</string>
    <string name="buy_egift">Buy egift</string>
    <string name="spend">Spend OTP</string>
    <string name="check_balance">Check Balance</string>
    <string name="menu_header" translatable="false">eGift</string>
    <string name="menu_logout">Logout</string>
    <string name="language">English</string>
    <string name="select_business">Select business</string>
    <string name="continue_title">Continue</string>
    <string name="select_merchant">Select merchant</string>
    <string name="select_business_warn">Please select a business</string>
    <string name="select_outlet">Select outlet</string>
    <string name="please_select_outlet">Please select an outlet</string>
    <string name="switch_business">Switch business</string>
    <string name="logout_msg">Are you sure you want to sign out?</string>
    <string name="gift_card_amount">Gift Card Amount</string>
    <string name="sender_name">Sender Name</string>
    <string name="beneficiary_name">Beneficiary Name</string>
    <string name="beneficiary_email">Beneficiary Email</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="gift_message">Gift Message</string>
    <string name="enter_message">Enter Message</string>
    <string name="purchase_a_gift_pass">Purchase a Gift Pass</string>
    <string name="euro_symbol">€</string>
    <string name="gc_value_must">Gift Card value must be between %1€ - %2€. Please provide a new value</string>
    <string name="many_requests">Too many Request in the same business. Please try again later</string>
    <string name="spend_failed">Transaction failed</string>
    <string name="cannot_get_passplans">Cannot get Pass plan</string>
    <string name="cancel_payment_success">Cancel payment successful</string>
    <string name="user_cancel_exit_button">User Cancel - exit button</string>
    <string name="user_cancel_on_back_press">User Cancel - on back pressed</string>
    <string name="transaction_timeout">Transaction Timeout</string>
    <string name="transaction_decline">Transaction declined</string>
    <string name="cannot_cancel_payment">Cannot cancel payment</string>
    <string name="user_cancel">User Cancel</string>
    <string name="agree_term">By filling in the information and completing the submission, you agree to the transaction terms found at www.cardlink.gr</string>
    <string name="do_you_wish_to_continue">Do you wish to continue?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="purchase_amount">Purchase Amount</string>
    <string name="select_payment_method">Select Your Payment Method</string>
    <string name="cash">Cash</string>
    <string name="card">Bank Card</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="enter_purchase_amount">Enter Purchase amount</string>
    <string name="active_offers">Active Offers</string>
    <string name="spend_from_ewallet">Redemption amount:</string>
    <string name="amount_due">Amount Due:</string>
    <string name="process_purchase">Purchase</string>
    <string name="input_must_6_digis">Please enter at least 6 digits</string>
    <string name="request_amount_not_more_purchase">Redemption amount should not be more than the purchase amount</string>
    <string name="request_amount_not_empty">The redemption amount cannot be zero</string>
    <string name="record_not_found">Record not found</string>
    <string name="not_enough_funds">There is not enough balance to complete the transaction.</string>
    <string name="phone_email_qrcode">Phone/Email/QR code</string>
    <string name="customer_otp_spend">Customer OTP Spend</string>
    <string name="select_method">Please select the method you want to use to purchase</string>
    <string name="spend_sucessful">The transaction was completed successfully. Proceed with payment of remaining amount via cash register.</string>
    <string name="transaction_sucessful">Transaction successful</string>

</resources>