<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.Spend2Fragment">

    <LinearLayout
        android:id="@+id/lnFragmentSpend1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:padding="30dp">

        <TextView
            android:id="@+id/textView2"
            style="@style/text_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_otp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="@dimen/edit_text_height"
                android:layout_weight="5"
                android:background="@drawable/field_border"
                android:paddingStart="8dp"
                android:paddingEnd="8dp">

                <EditText
                    android:id="@+id/edFragmentSpend2Otp"
                    style="@style/text_normal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/Transparent"
                    android:cursorVisible="true"
                    android:ems="6"
                    android:maxLength="6"
                    android:hint="123456"
                    android:focusable="auto"
                    android:inputType="number"
                    android:textColor="@color/textEdit"
                    android:textColorHint="@color/textHint"
                    android:textIsSelectable="false" />
            </RelativeLayout>
        </LinearLayout>


        <TextView
            android:id="@+id/textView7"
            style="@style/text_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/enter_purchase_amount" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_height"
            android:layout_marginTop="12dp"
            android:background="@drawable/field_border"
            android:paddingStart="8dp"
            android:paddingEnd="8dp">

            <EditText
                android:id="@+id/edFragmentSpend2Amount"
                style="@style/text_normal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/Transparent"
                android:cursorVisible="true"
                android:ems="10"
                android:focusable="auto"
                android:hint="€0.00"
                android:inputType="numberDecimal"
                android:textColor="@color/textEdit"
                android:textColorHint="@color/textHint"
                android:textIsSelectable="false" />
        </RelativeLayout>

        <TextView
            android:id="@+id/textView8"
            style="@style/text_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/active_offers" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cvActiveOffers"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="10dp"
            app:cardCornerRadius="10dp"
            app:strokeColor="@color/colorPrimary"
            app:strokeWidth="1dp"
            >
            <ListView
                android:id="@+id/lvActiveOffers"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:divider="@null"
                android:dividerHeight="0dp"
                android:background="@color/colorPrimaryDark"
                android:listSelector="@color/Transparent"
                />
        </com.google.android.material.card.MaterialCardView>

<!--        <Switch-->
<!--            android:id="@+id/swFragmentSpend2EWallet"-->
<!--            style="@style/text_label"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="15dp"-->
<!--            android:text="@string/spend_from_ewallet" />-->

        <TextView
            style="@style/text_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/spend_from_ewallet" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="@dimen/edit_text_height"
                android:layout_marginEnd="4dp"
                android:layout_weight="3"
                android:background="@drawable/field_border"
                android:paddingStart="8dp"
                android:paddingEnd="8dp">

                <EditText
                    android:id="@+id/edFragmentSpend2EWallet"
                    style="@style/text_normal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/Transparent"
                    android:cursorVisible="true"
                    android:ems="10"
                    android:focusable="auto"
                    android:hint="€0.00"
                    android:inputType="numberDecimal"
                    android:textColor="@color/textEdit"
                    android:textColorHint="@color/textHint"
                    />
            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView9"
                style="@style/text_large"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/amount_due"
                android:textColor="@color/colorPrimary" />

            <TextView
                android:id="@+id/tvFragmentSpend2AmountDue"
                style="@style/text_large"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="2"
                android:gravity="right"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:gravity="bottom"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_primary_height"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="10dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="0dp"
                app:cardPreventCornerOverlap="false">

                <TextView
                    android:id="@+id/btFragmentSpend2ProcessPurchase"
                    style="@style/button_primary"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:background="@color/buttonDisable"
                    android:enabled="false"
                    android:gravity="center"
                    android:text="@string/process_purchase"
                    android:textAlignment="center"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="20sp"
                    android:textStyle="normal" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>